<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/header" />

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_bold"
        android:letterSpacing="0.1"
        android:text="@string/app_name_cap"
        android:textColor="@color/white"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toTopOf="@+id/header" />

    <TextView
        android:id="@+id/doorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/title_door"
        android:textColor="@color/grey_700"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <Button
        android:id="@+id/openButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@mipmap/button_green"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/action_open"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doorText" />

    <Button
        android:id="@+id/lockButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@mipmap/button_red"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/action_lock"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/rfidTagBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openButton"
        app:layout_constraintVertical_bias="0.22" />

    <ImageView
        android:id="@+id/rfidTagBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_rfid_box"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:srcCompat="@mipmap/box" />

    <TextView
        android:id="@+id/rfidTagText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/title_rfid"
        android:textColor="@color/grey_700"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rfidTagBox"
        app:layout_constraintTop_toTopOf="@+id/rfidTagBox" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@mipmap/button_green"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/action_add"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/rfidTagBox"
        app:layout_constraintStart_toStartOf="@+id/rfidTagBox"
        app:layout_constraintTop_toBottomOf="@+id/rfidTagText" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/button_red"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/action_remove"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/rfidTagBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/rfidTagBox"
        app:layout_constraintTop_toBottomOf="@+id/addButton"
        app:layout_constraintVertical_bias="0.176" />

</android.support.constraint.ConstraintLayout>